fix: fallbacks and gap

--- a/desktop/src/app/components/widgets/document-info/document-info.scss
+++ b/desktop/src/app/components/widgets/document-info/document-info.scss
@@ -56,6 +56,7 @@ document-info {
     align-items: center;
     font-size: 14px;
     cursor: pointer;
+    gap: 8px;
   }
 
   .document-info-parent span.mdi {
